# Ollama-stats

./: .gitignore  README.md  app.py  benchmarks.json  build_dashboard.py  daily_update.py  index.html  inject_data.py  pyproject.toml  save_rich_data.py
scripts/: scrape_all.py  scrape_ollama.py  scrape_ollama_models.py  scraper.py
